--- a/Business/BusinessInterface/build.gradle
+++ b/Business/BusinessInterface/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    implementation project(path: ':RouteManager')
-    annotationProcessor project(path: ':RouteCompiler')
+//    implementation project(path: ':RouteManager')
+//    annotationProcessor project(path: ':RouteCompiler')
 }
