--- a/CommonLib/ToolUtilsLib/build.gradle
+++ b/CommonLib/ToolUtilsLib/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':EventUploadLib')
-    implementation project(path: ':AppCompress')
+    implementation project(path: ':CardManager')
     implementation project(path: ':AppEncryptLib')
     implementation project(path: ':AppContextLib')
     implementation project(path: ':NetWorkLib')
