--- a/AppHardware/src/main/AndroidManifest.xml
+++ b/AppHardware/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.yc.apphardware.PresentationActivity"/>
-        <activity android:name="com.yc.apphardware.card.M1CardActivity"/>
+        <activity android:name="com.yc.apphardware.card.TestCardActivity"/>
     </application>
 
 </manifest>
