--- a/Hardware/CardManager/build.gradle
+++ b/Hardware/CardManager/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
     implementation project(path: ':MifareCard')
     implementation project(path: ':CpuCard')
 }
