--- a/Hardware/MifareCard/build.gradle
+++ b/Hardware/MifareCard/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
+    implementation project(path: ':ByteToolUtils')
 }
