--- a/settings.gradle
+++ b/settings.gradle
@@ -379,3 +379,4 @@ project(':usbCameraTest6').projectDir = new File('JniNdkLib/usbCameraTest6')
 project(':usbCameraTest7').projectDir = new File('JniNdkLib/usbCameraTest7')
 project(':usbCameraTest8').projectDir = new File('JniNdkLib/usbCameraTest8')
 
+include ':AppTest'
