--- a/Hardware/KeyEventLib/src/main/AndroidManifest.xml
+++ b/Hardware/KeyEventLib/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.yc.keyeventlib">
 
     <application>
-        <activity android:name=".demo.KeyCodeActivity"/>
-        <activity android:name=".demo.KeyCodeActivity2"/>
+        <activity android:name=".test.KeyCodeActivity"/>
+        <activity android:name=".test.KeyCodeActivity2"/>
     </application>
 
 </manifest>
