feat：完善心跳功能逻辑

--- a/Hardware/SerialPort/build.gradle
+++ b/Hardware/SerialPort/build.gradle
@@ -16,7 +16,7 @@ android {
         ndk {
             // Specifies the ABI configurations of your native
             // libraries Gradle should build and package with your APK.
-            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            abiFilters 'armeabi-v7a'
         }
         externalNativeBuild {
             cmake {
@@ -38,6 +38,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            buildConfigField "boolean", "IS_NET_DEBUG", "true"
         }
     }
     compileOptions {
