--- a/ToolLib/LooperThread/src/main/AndroidManifest.xml
+++ b/ToolLib/LooperThread/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.yc.looperthread">
 
     <application>
-        <service android:name="com.yc.looperthread.HeartService"/>
+        <service android:name="com.yc.looperthread.heart.HeartService"/>
     </application>
 
 
