feat：完善心跳功能逻辑

--- a/ToolLib/LooperThread/src/main/AndroidManifest.xml
+++ b/ToolLib/LooperThread/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <application>
         <service android:name="com.yc.looperthread.heart.HeartService"/>
+        <receiver
+            android:name="com.yc.looperthread.heart.HeartReceiver"
+            android:exported="false" />
     </application>
 
 
