--- a/ToolLib/AppTool/src/main/AndroidManifest.xml
+++ b/ToolLib/AppTool/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name="com.yc.apptool.thread.EasyExecutorActivity"/>
         <activity android:name="com.yc.apptool.thread.ThreadPollActivity"/>
         <activity android:name=".looper.LoopThreadActivity"/>
+        <activity android:name=".heart.HeartActivity"/>
     </application>
 
 </manifest>
