--- a/JniNdkLib/CallJniLib/src/main/AndroidManifest.xml
+++ b/JniNdkLib/CallJniLib/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yc.calljni" />
+    package="com.yc.calljni">
+
+    <application android:label="@string/app_name">
+
+    </application>
+</manifest>
