feat：研究jni处理异常

--- a/MmapLog/build.gradle
+++ b/MmapLog/build.gradle
@@ -20,7 +20,7 @@ android {
         }
         externalNativeBuild {
             cmake {
-                cppFlags ""
+                cppFlags "-std=c++11 -frtti -fexceptions -lz"
             }
         }
     }
