feat：完善轮询demo测试案例

--- a/ToolLib/LooperThread/src/main/AndroidManifest.xml
+++ b/ToolLib/LooperThread/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <receiver
             android:name="com.yc.looperthread.heart.HeartReceiver"
             android:exported="false" />
+        <activity android:name="com.yc.looperthread.test.HeartActivity"/>
     </application>
 
 
