--- a/AppTest/src/main/AndroidManifest.xml
+++ b/AppTest/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HeartActivity"/>
+        <activity android:name="com.yc.looperthread.test.HeartActivity"/>
     </application>
 
 </manifest>
